<resources>
    <string name="app_name"> Прилазеня </string>
    <string name="button_describe"> Описание </string>
    <string name="text_lk"> Личный кабинет </string>
    <string name="text_movies"> Выбрать фильм </string>
    <string name="finish"> Выход </string>
    <string name="text_button_check"> Сохранить данные </string>
    <string name="text_button_check_2">Связаться с поддержкой</string>
    <string name="hint_message">Введите вопрос</string>
    <string name="button_send">Отправить</string>
    <string name="choose_method">Как вы хотите отправить сообщение?</string>
    <string name="stopwatch">Секундомер</string>
    <string name="start_stopwatch">Start</string>
    <string name="pause_stopwatch">Pause</string>
    <string name="reset_stopwatch">Reset</string>
    <string name="text_stopwatch">0:00:00</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="button_lk">Авторизоваться</string>
    <string name="logo_description">Логотип</string>
    <string name="hint_name">Введите своё имя:</string>
    <string name="hint_password">Введит свой пароль:</string>
    <string name="toast">Все поля должны быть заполнены</string>
    <string name="text_hello_client">Привет, %s! Что будешь делать?</string>
    <string name="text_watch_movie">Смотреть фильм</string>
    <string name="text_sleep">Спать</string>
    <string name="text_towel">Одеялко</string>
    <string name="text_add_order">Что принести, чтобы %s</string>
    <string name="text_chips">Чипсики</string>
    <string name="text_beer">Пивасик</string>
    <string name="text_where">Где будешь вялиться?</string>
    <string name="text_button_order">Кнопка заказать</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\nПароль: %s\nСобрался: %s\nГде: %s</string>
    <string name="need_additions">При себе имеются: </string>
    <string name="logo_choose_movie">Логотип выбора фильма</string>
    <string name="image_fantasy_movies">Fantasy movies</string>
    <string name="description_of_fantasy_png">fantasy_png</string>

    <string-array name="list_of_movies">
        <item>Star Trek: Picard</item>
        <item>The Mandalorian</item>
        <item>The Witcher</item>
        <item>Joker</item>
        <item>Tenet</item>
        <item>Altered Carbon</item>
    </string-array>

    <string-array name="decriptions_of_movies">
        <item>В конце 24-го века, через 14 лет после выхода на пенсию из Звездного Флота, Жан-Люк Пикар живет спокойной жизнью на своем винограднике Шато Пикар. Когда его разыскивает таинственная молодая женщина Даж, нуждающаяся в его помощи, он вскоре понимает, что она может быть связана с его собственным прошлым.</item>
        <item>Американский телесериал в жанре космический вестерн, созданный Джоном Фавро для стримингового сервиса Disney+. Это первый игровой сериал, являющийся составной частью вселенной «Звёздных войн». Действие «Мандалорца» разворачивается пять лет спустя после событий фильма «Возвращение джедая».</item>
        <item>Это экранизация литературного цикла польского писателя Анджея Сапковского. События книг разворачиваются в фэнтезийном мире Континента: там люди, эльфы, краснолюды и другие расы соседствуют с жуткими чудовищами. Главный герой сериала — профессиональный убийца чудовищ Геральт.</item>
        <item>Готэм, начало 1980-х годов. Комик Артур Флек живет с больной матерью, которая с детства учит его «ходить с улыбкой». Пытаясь нести в мир хорошее и дарить людям радость, Артур сталкивается с человеческой жестокостью и постепенно приходит к выводу, что этот мир получит от него не добрую улыбку, а ухмылку злодея Джокера.</item>
        <item>После теракта в киевском оперном театре агент ЦРУ объединяется с британской разведкой, чтобы противостоять русскому олигарху, который сколотил состояние на торговле оружием. Для этого агенты используют инверсию времени — технологию будущего, позволяющую времени идти вспять.</item>
        <item>Фильм рассказывает о будущем, в котором межзвёздные путешествия осуществляются перемещением сознания между телами («оболочками»). Такеши Ковач, бывший элитный солдат Корпуса посланников, становится частным детективом, нанятым богатым человеком для расследования собственной смерти.</item>
    </string-array>

    <string-array name="options_of_movie">
        <item>На стуле</item>
        <item>На диване</item>
        <item>В кинотеатре</item>
    </string-array>

    <string-array name="options_of_sleep">
        <item>В кроватке</item>
        <item>В машине</item>
        <item>В подворотне</item>
    </string-array>

    <string-array name="list_of_categories">
        <item>Fantasy</item>
        <item>Drama</item>
        <item>Comedy</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Thriller</item>
    </string-array>

    <string name="fantasy_mandalorian_title">The Mandalorian</string>
    <string name="fantasy_witcher_title">The Witcher</string>
    <string name="fantasy_harry_potter_title">Harry Potter</string>

    <string name="fantasy_mandalorian_info">Американский телесериал в жанре космический вестерн, созданный Джоном Фавро для стримингового сервиса Disney+. Это первый игровой сериал, являющийся составной частью вселенной «Звёздных войн». Действие «Мандалорца» разворачивается пять лет спустя после событий фильма «Возвращение джедая».</string>
    <string name="fantasy_witcher_info">Это экранизация литературного цикла польского писателя Анджея Сапковского. События книг разворачиваются в фэнтезийном мире Континента: там люди, эльфы, краснолюды и другие расы соседствуют с жуткими чудовищами. Главный герой сериала — профессиональный убийца чудовищ Геральт.</string>
    <string name="fantasy_harry_potter_info">Серия фильмов о Гарри Поттере — серия фильмов, основанных на книгах о Гарри Поттере английской писательницы Дж. К. Роулинг. Серия выпущена компанией Warner Bros. и состоит из одиннадцати фильмов в жанре фэнтези, включая основную серию — начиная с «Гарри Поттер и философский камень» (2001) и заканчивая «Гарри Поттер и Дары Смерти. Часть 2» (2011), — а также спин-офф «Фантастические твари и где они обитают» (2016) и его сиквелы</string>
    <string name="table">Таблица</string>
    <string name="button_mem">А шо за кнопка?</string>
    <string name="guess_movie">Угадай год фильма</string>
    <string name="button0">Button0</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="image_guess">image_guess</string>
    <string name="text_result">Твой результат: %d очков!</string>
    <string name="test_brain">Test brain</string>
    <string name="button_restart_game">НАЧАТЬ ЗАНОВО</string>
    <string name="button_exit_main_menu">Выйти в главное меню</string>
    <string name="Заметки">button_text_notes</string>
    <string name="text_button_notes">Заметки</string>
    <string name="add_notes_button">Добавить заметку</string>
    <string name="button_add_note">Добавить заметку</string>
    <string name="hint_title">Заголовок заметки:</string>
    <string name="hint_description">Описание заметки:</string>
    <string name="priority1">1</string>
    <string name="priority2">2</string>
    <string name="priority3">3</string>
    <string name="warning_fill">Все поля должны быть заполнены</string>
    <string name="text_button_capital">Столицы</string>
    <string name="text_button_users">Пользователи</string>

    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name ="list_of_sex">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

</resources>