<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopWatch">

    <TextView
        android:id="@+id/text_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:layout_margin="50dp"
        android:text="@string/text_stopwatch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_start_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_stopwatch"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_stopwatch"/>

    <Button
        android:id="@+id/button_pause_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_stopwatch"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_stopwatch"/>

    <Button
        android:id="@+id/button_reset_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_stopwatch"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_pause_stopwatch"/>

</androidx.constraintlayout.widget.ConstraintLayout>